--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/hugo-base16-theme"]
-    path = themes/hugo-base16-theme
-    url = https://github.com/htdvisser/hugo-base16-theme
+[submodule "themes/aether"]
+    path = themes/aether
+    url = https://github.com/josephhutch/aether.git
