--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,6 @@ theme = "aether"
 [params]
 brand = "sebi"
 description = "The website's description"
-homeimg = "URL to the image used for the home button at the bottom of each post - optional"
-bgimg = "URL to the image used for the page background - optional"
+homeimg = "/uploads/IMG_1117.png"
+bgimg = "/uploads/IMG_1117.png"
 
